language/move-lang/tests/move_check/parser/let_binding_missing_semicolon.exp
error: 

   ┌── tests/move_check/parser/let_binding_missing_semicolon.move:4:5 ───
   │
 4 │     }
   │     ^ Unexpected '}'
   ·
 4 │     }
   │     - Expected ';'
   │

