language/move-lang/tests/move_check/parser/let_binding_missing_semicolon.move
module M {
    fun f() {
        let x // Test a missing semicolon
    }
}
